# xlstm.c

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES
.github/workflows/: ci.yml
adapters/esp-dl/: README.md  mlstm_espdl.cpp  mlstm_espdl.hpp  slstm_espdl.cpp  slstm_espdl.hpp
adapters/microtvm/: README.md  mlstm_tvm.c  mlstm_tvm.h  slstm_tvm.c  slstm_tvm.h
adapters/onnxruntime/: README.md  mlstm_ort.cc  mlstm_ort.h  slstm_ort.cc  slstm_ort.h  xlstm_ort_register.cc
adapters/tflm/: README.md  mlstm_tflm.cc  mlstm_tflm.h  slstm_tflm.cc  slstm_tflm.h
include/: mlstm.h  mlstm_q8.h  slstm.h  slstm_q8.h  xlstm_quant.h  xlstm_util.h
src/: mlstm.c  mlstm_q8.c  slstm.c  slstm_q8.c  xlstm_quant.c
test/: generate_reference.py  mlstm_q8_test.cc  mlstm_test.cc  reference_data.h  reference_data.json  slstm_q8_test.cc  slstm_test.cc  test_util.h
test/adapters/esp-dl/: CMakeLists.txt  Dockerfile
test/adapters/esp-dl/main/: CMakeLists.txt  test_espdl.cpp
test/adapters/microtvm/: Dockerfile  test_tvm.py  tvm_register_wrapper.cc
test/adapters/onnxruntime/: Dockerfile  test_ort.py
test/adapters/tflm/: Dockerfile  generate_model.py  test_tflm.cc
